--- a/frontend/src/components/ProductDetail/ProductDetail.css
+++ b/frontend/src/components/ProductDetail/ProductDetail.css
@@ -12,9 +12,14 @@
         padding: 20px;
         grid-area: 1 / 1 / 3 / 3;
     }
+    .product-course-price{
+        border-radius: 2%;
+        background-color: white;
+        padding:  30px 35px;
+        border-bottom: 1px solid rgba(239,239,239,0.76);
+    }
     .top-right-column{
         border-radius: 2%;
-        grid-area: 1 / 3 / 2 / 4;
         background-color: white;
         padding:  30px 35px;
         margin-bottom: 5px;
@@ -104,7 +109,7 @@
 .text-link-home{
     text-decoration: none;
     color: #00bc86;
-    margin-right: 5px;
+    margin-left: -10px;
 }
 .text-link-home:hover{
     font-weight: 700;
@@ -124,6 +129,7 @@
     text-decoration: none;
     color: black;
     margin-right: 5px;
+    font-weight: 700;
     margin-left: 5px;
 }
 .text-link-loai-2:hover{
@@ -131,7 +137,7 @@
 }
 
 .title-header-text{
-    margin: 0px 0px 20px;
+    margin: 10px 0px 20px;
     font-size: 42px;
     line-height: 53px;
     font-weight: 800;
@@ -146,9 +152,9 @@
     font-size: 14px;
     line-height: 19px;
     color: #00bc86;
-    margin: 0 15px 30px 0;
     display: inline-block;
     border-radius: 10px;
+    margin-left: 10px;
 }
 .group-status{
     display:flex;
@@ -192,10 +198,9 @@
     line-height: 20px;
     font-weight: 700;
     color: #403938;
-    margin: 0 0 20px;
 }
 .product-cost{
-    font-size: 22px;
+    font-size: 32px;
     color: red;
     font-weight: 700;
     padding-top: 10px;
@@ -214,6 +219,8 @@
     text-decoration: line-through 0.1px;
     font-weight: 500;
     margin: 0;
+    font-size: 22px;
+
 }
 .product-cart-button{
     height: 50px;
@@ -227,7 +234,7 @@
     justify-content: center;
     text-align: center;
     padding: 0 25px;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
     color: #fff;
     border: 1px solid #00bc86;
     background: #00bc86;
@@ -242,7 +249,7 @@
 }
 .product-cart-button:hover{
     color:black;
-    background-color:red;
+    background-color:rgb(88, 158, 39);
 }
 
 .product-des{
@@ -250,16 +257,24 @@
     line-height: 20px;
     font-weight: 700;
     color: #403938;
-    margin: 0 0 20px;
+    margin: 10px 0 20px;
 }
 .youll-learn{
     padding: 10px 20px;
     margin:auto;
+    font-size: 16px;
 }
 .learn-title{
     font-size: 24px;
     line-height: 20px;
     font-weight: 700;
-    color: lightgreen;
-    margin: 0 0 20px;
+    color: black;
+    margin: 20px 0 20px;
+}
+.bot-body-product{
+    border-radius: 12px;
+        background-color: white;
+        padding:  30px 35px;
+        margin: 10px 0 10px 0;
+        border-bottom: 1px solid rgba(239,239,239,0.76);
 }
