update css breadcrumb

--- a/frontend/src/components/ProductDetail/ProductDetail.css
+++ b/frontend/src/components/ProductDetail/ProductDetail.css
@@ -106,7 +106,7 @@
     margin: 0;
     text-align: left;
 }
-.text-link-home{
+.top-body-product .text-link-home{
     text-decoration: none;
     color: #00bc86;
     margin-left: -10px;
